ref #8035 temporary solution to solve layout problems in switchable-textfield

--- a/src/main/webapp/VAADIN/themes/edit-valo/custom-fields.scss
+++ b/src/main/webapp/VAADIN/themes/edit-valo/custom-fields.scss
@@ -93,6 +93,7 @@ body .edit-valo { // increasing specifity to allow overriding the valo default f
     .v-switch {
         top: round($v-unit-size * 0.75);
         right: round($v-unit-size / 4);
+        position: absolute !important; // this is a temporary fix for the issue https://dev.e-taxonomy.eu/redmine/issues/8035
     }
   }
   
